# noir-canv

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  turbo.json  vercel.json
pipeline/: check_artists.py  check_pieces.py  fix_artists.py  publish_pieces.py  pyproject.toml  watch_and_publish.py
pipeline/content/artists/: aaron-craig.yaml  angela-ho-style.yaml  atlas-reed.yaml  atlas-wilde.yaml  aurora-cross.yaml  bea-gomez.yaml  brian-reedy-flux.yaml  brian-reedy-gemini.yaml  brian-reedy-style.yaml  cedar-delacroix.yaml  cedar-lane.yaml  cedar-stone.yaml  elara-chen.yaml  elara-nakamura.yaml  elara-sato.yaml  ember-holloway.yaml  fenna-haas.yaml  hiro-tomo.yaml  ivy-delacroix.yaml  jasper-vale.yaml  kai-blake.yaml  kai-vale.yaml  kai-voss.yaml  kira-ashworth.yaml  leo-strand.yaml  leo-vale.yaml  luna-stone.yaml  luna-wilde.yaml  mae-ryden.yaml  marcus-chen.yaml  nova-ash.yaml  nova-gray.yaml  orion-wilde.yaml  paul-melvo.yaml  rave-zola.yaml  ren-cross.yaml  ren-nakamura.yaml  ren-vale.yaml  river-cross.yaml  river-strand.yaml  (+6 more)
pipeline/src/pipeline/: __init__.py  __main__.py  cli.py
pipeline/src/pipeline/api/: __init__.py  deps.py  main.py  models.py  tasks.py
pipeline/src/pipeline/commands/: __init__.py  artist_studio.py  avatar.py  create_artist.py  curate.py  frame.py  full.py  generate.py  mockup.py  process_images.py  register.py  room_mockup.py  room_templates_cmd.py  standardise.py  upscale.py
pipeline/src/pipeline/lib/: __init__.py  config.py  (+7 more)
pipeline/tests/: conftest.py  test_paths.py  test_schemas.py
(+109 files in other folders)
